fixing text area white spacing

--- a/workspace/RESTfullBlogApp/public/stylesheets/app.css
+++ b/workspace/RESTfullBlogApp/public/stylesheets/app.css
@@ -11,3 +11,6 @@ i.icon{
 #bt1{
     margin-top:2%;
 }
+#text{
+    white-space: pre-wrap;
+}
